[package]
name = "kiara"
version = "0.1.0"
edition = "2021"

[lib]
name = "kiara"
path = "src/lib.rs"

[[bin]]
name = "kiara"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0.69"
directories = "4.0.1"
tokio = { version = "1.27.0", features = ["full"] }
tracing-subscriber = "0.3.16"
viva = { path = "../viva" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
term_size = "0.3.2"
zmq = "0.10"
